# kaleidoscope

./: .gitignore  Authors.txt  CMakeLists.txt  README.md
include/: TigerLexer.h  absyn.h  codegen.h  table.h  types.h  utils.h
lib/: runtime.c  runtime.cxx
src/: a.ts  absyn.cpp  codegen.cpp  lexer.x  main.cpp  parser.yy  types.cpp  utils.cpp
testcases/: hello.tig  spills.tig
